--- a/.gitattributes
+++ b/.gitattributes
@@ -62,4 +62,5 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 #############################################################################
-*.js linguist-vendored
+#*.js linguist-vendored
+*.js linguist-detectable=false
